# cmake_test

./: CMakeLists.txt  hello.c
lib/: hello.cpp
